--- a/images/styles/portfolio.css
+++ b/images/styles/portfolio.css
@@ -127,3 +127,55 @@ font-size: 20px;
 font-weight: 700;
 color:  #474747;
 }
+
+/* What I Do Section */
+
+.what-i-do{
+padding: 0px 230px;
+
+}
+
+.what-i-do-title{
+margin-bottom: 30px;
+font-weight: 700;
+font-size: 35px;
+color: #181818;
+text-align: center;
+}
+
+.what-i-do-description{
+  font-weight: 400;
+  font-size: 18px;
+  color: #757575;
+  margin: 30px 0px 50px;
+}
+
+.all-my-skils{
+  display: flex;
+  gap: 24px;
+  margin-left: 35px;
+}
+
+.my-skills{
+border-radius: 5px;
+background: #FFF;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+/* width: 267px;
+height: 377px; */
+padding: 30px;
+
+}
+
+.skill-title{
+  font-weight: 700;
+  font-size: 20px;
+  color: #181818;
+  margin: 38px 0 20px;
+}
+
+.skill-description{
+  font-weight: 400;
+  font-size: 16px;
+  color: #757575;
+
+}
