--- a/images/styles/portfolio.css
+++ b/images/styles/portfolio.css
@@ -165,15 +165,15 @@ text-align: center;
 .all-my-skils{
   display: flex;
   gap: 24px;
-  margin-left: 35px;
+  margin-left: 175px;
 }
 
 .my-skills{
 border-radius: 5px;
 background: #FFF;
 box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
-/* width: 267px;
-height: 377px; */
+width: 200px;
+/* height: 377px; */
 padding: 30px;
 
 }
